update tampilan mobile

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="animate.min.css">
 </head>
 
 <body>
@@ -36,7 +37,7 @@
                     <img src="img/img/bread-1.png" alt="">
                 </div>
                 <div class="hero-img">
-                    <img src="img/img/home-bread.png" alt="">
+                    <img src="img/img/home-bread.png" alt="" class="animate__animated animate__jackInTheBox">
                 </div>
             </div>
 
